--- a/load1.html
+++ b/load1.html
@@ -20,7 +20,7 @@
             color: white;
         }
         form {
-            max-width: 90%;
+            max-width: 600px;
             margin: 20px auto;
             padding: 15px;
             border: 1px solid #ccc;
@@ -61,7 +61,7 @@
         table {
             margin: 20px auto;
             border-collapse: collapse;
-            width: 95%;
+            width: 80%;
             background-color: white;
         }
         table, th, td {
@@ -74,6 +74,11 @@
         th {
             background-color: #f4f4f9;
             font-weight: bold;
+        }
+        #daily-load {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 18px;
         }
         @media (max-width: 600px) {
             h1 {
@@ -107,14 +112,15 @@
     </form>
 
     <div id="result" style="text-align: center; margin-top: 20px;"></div>
+    <div id="daily-load"></div>
 
     <script>
         function calculateTrainingLoad(event) {
             event.preventDefault();
             
-            const weeklyTL = parseFloat(document.getElementById('weekly_tl').value);
-            const vcrMinutes = parseFloat(document.getElementById('vcr_minutes').value);
-            const vcrSeconds = parseFloat(document.getElementById('vcr_seconds').value);
+            const weeklyTL = parseInt(document.getElementById('weekly_tl').value);
+            const vcrMinutes = parseInt(document.getElementById('vcr_minutes').value);
+            const vcrSeconds = parseInt(document.getElementById('vcr_seconds').value);
             const vcrPaceSeconds = vcrMinutes * 60 + vcrSeconds;
 
             const zones = ['Z1', 'Z2', 'Z3', 'Z4-Z6'];
@@ -122,7 +128,7 @@
             const durationConstants = [0.8, 1.57, 2.58, 3.47];
             const distanceMultipliers = [0.7, 0.85, 0.9, 1.0];
 
-            const zoneTL = percentages.map(p => weeklyTL * p);
+            const zoneTL = percentages.map(p => Math.floor(weeklyTL * p));
             const durations = zoneTL.map((tl, i) => Math.ceil(tl / durationConstants[i]));
             const distances = durations.map((duration, i) => Math.ceil(duration * 60 * distanceMultipliers[i] / vcrPaceSeconds));
 
@@ -135,13 +141,17 @@
                 totalTL += zoneTL[i];
                 totalDuration += durations[i];
                 totalDistance += distances[i];
-                tableHTML += `<tr><td>${zone}</td><td>${zoneTL[i].toFixed(2)}</td><td>${durations[i]}</td><td>${distances[i]}</td></tr>`;
+                tableHTML += `<tr><td>${zone}</td><td>${zoneTL[i]}</td><td>${durations[i]}</td><td>${distances[i]}</td></tr>`;
             });
 
-            tableHTML += `<tr><th>Total</th><th>${totalTL.toFixed(2)}</th><th>${totalDuration}</th><th>${totalDistance}</th></tr>`;
+            tableHTML += `<tr><th>Total</th><th>${totalTL}</th><th>${totalDuration}</th><th>${totalDistance}</th></tr>`;
             tableHTML += '</table>';
 
+            const dailyLoad = Math.floor(totalTL / 7);
+            const dailyLoadHTML = `Daily Load: <strong>${dailyLoad}</strong>`;
+
             document.getElementById('result').innerHTML = tableHTML;
+            document.getElementById('daily-load').innerHTML = dailyLoadHTML;
         }
     </script>
 </body>
