--- a/load1.html
+++ b/load1.html
@@ -75,6 +75,9 @@
             background-color: #f4f4f9;
             font-weight: bold;
         }
+        td:nth-child(3), td:nth-child(4) {
+            width: 15%; /* Adjust column width for Est. Duration and Est. Distance */
+        }
         #daily-load {
             text-align: center;
             margin-top: 20px;
