--- a/load1.html
+++ b/load1.html
@@ -75,7 +75,7 @@
             background-color: #f4f4f9;
             font-weight: bold;
         }
-        td:nth-child(3), td:nth-child(4) {
+        td:nth-child(1), td:nth-child(2) , td:nth-child(3), td:nth-child(4) {
             width: 15%; /* Adjust column width for Est. Duration and Est. Distance */
         }
         #daily-load {
