--- a/load1.html
+++ b/load1.html
@@ -180,8 +180,8 @@
             updatePercentages(event.target.value);
         });
 
-        // Initialize with default phase
-        updatePercentages('Base');
+        // // Initialize with default phase
+        // updatePercentages('Base');
 
             
             const zoneTL = percentages.map(p => Math.floor(weeklyTL * p));
