--- a/load1.html
+++ b/load1.html
@@ -181,8 +181,8 @@
         });
 
             
-        // // Initialize with default phase
-        // updatePercentages('Base');
+        // Initialize with default phase
+        updatePercentages('Base');
 
             
             const zoneTL = percentages.map(p => Math.floor(weeklyTL * p));
