--- a/load1.html
+++ b/load1.html
@@ -118,9 +118,9 @@
         <label for="weekly_tl">Weekly Training Load (TL):</label>
         <input type="number" id="weekly_tl" name="weekly_tl" required>
         
-            <label for="phaseSelector">Select Phase:</label>
+    <label for="phaseSelector">Select Phase:</label>
     <select id="phaseSelector">
-        <option value="Base">Base</option>
+        <option value="Base" selected>Base</option>
         <option value="Build">Build</option>
         <option value="Peak">Peak</option>
     </select>
