--- a/load1.html
+++ b/load1.html
@@ -137,7 +137,7 @@
 
     <script>
         const zones = ['Z1', 'Z2', 'Z3', 'Z4-Z6'];
-        let percentages = [0.2, 0.6, 0.15, 0.05]; // Default to Base
+        let percentages = [0.1, 0.55, 0.15, 0.2]; // Default to Build
         const durationConstants = [0.8, 1.60, 2.58, 3.60];
         const distanceMultipliers = [0.7, 0.80, 0.9, 0.98];
 
@@ -160,7 +160,7 @@
                     percentages = [0.1, 0.50, 0.2, 0.2];
                     break;
                 default:
-                    percentages = [0.2, 0.6, 0.15, 0.05]; // Default to Base
+                    percentages = [0.1, 0.55, 0.15, 0.2]; // Default to Build
             }
         }
 
