--- a/load1.html
+++ b/load1.html
@@ -120,8 +120,8 @@
         
         <label for="phaseSelector">Select Phase:</label>
         <select id="phaseSelector">
-            <option value="Base" selected>Base</option>
-            <option value="Build">Build</option>
+            <option value="Base">Base</option>
+            <option value="Build" selected>Build</option>
             <option value="Peak">Peak</option>
         </select>
         
