--- a/load1.html
+++ b/load1.html
@@ -116,7 +116,7 @@
     <h1>Training Load Calculator</h1>
     <form oninput="calculateTrainingLoad()">
         <label for="weekly_tl">Weekly Training Load (TL):</label>
-        <input type="number" id="weekly_tl" name="weekly_tl" required placeholder="400-1400">
+        <input type="number" id="weekly_tl" name="weekly_tl" required placeholder="400 beginner - >2000 worldclass">
         
         <label for="phaseSelector">Select Phase:</label>
         <select id="phaseSelector">
