--- a/load1.html
+++ b/load1.html
@@ -111,6 +111,7 @@
         <option value="https://wadcharid.github.io/vcr-fcaon/pace3.html">5.VCR Weekly Plan</option>
         <option value="https://wadcharid.github.io/vcr-fcaon/load1.html">6.COROS Load</option>
         <option value="https://wadcharid.github.io/vcr-fcaon/training1.html">7.Training Program</option>
+        <option value="https://wadcharid.github.io/vcr-fcaon/load1.html">8.คำนวณเวลาวิ่งรวม</option>
     </select>
     
     <h1>Training Load Calculator</h1>
