--- a/vcr2.html
+++ b/vcr2.html
@@ -125,6 +125,7 @@
         <option value="https://wadcharid.github.io/vcr-fcaon/pace3.html">5.VCR Weekly Plan</option>
         <option value="https://wadcharid.github.io/vcr-fcaon/load1.html">6.COROS Load</option>
         <option value="https://wadcharid.github.io/vcr-fcaon/training1.html">7.Training Program</option>
+        <option value="https://wadcharid.github.io/vcr-fcaon/load1.html">8.คำนวณเวลาวิ่งรวม</option>
     </select>
     
     <div class="container">
