--- a/time1.html
+++ b/time1.html
@@ -42,20 +42,6 @@
     </style>
 </head>
 <body>
-
-    <label for="menu">Choose a page:</label>
-    <select id="menu" onchange="location = this.value;">
-        <option value="">-- Select --</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/vcr1.html">1.หาค่า VCR</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/vcr2.html">2.หาโซนจาก VCR </option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/pace1.html">3.คำนวณ Pace,Distance,Time</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/pace2.html">4.คำนวณ %Pace</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/pace3.html">5.VCR Weekly Plan</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/load1.html">6.COROS Load</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/training1.html">7.Training Program</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/load1.html">8.คำนวณเวลาวิ่งรวม</option>
-    </select>
-    
     <h1>Pace and Time Calculator</h1>
     <table>
         <thead>
@@ -63,7 +49,7 @@
                 <th>Distance (km)</th>
                 <th>Pace (Minutes)</th>
                 <th>Pace (Seconds)</th>
-                <th>Time (Minutes)</th>
+                <th>Time (Minutes:Seconds)</th>
             </tr>
         </thead>
         <tbody id="calculatorTable">
@@ -71,14 +57,14 @@
                 <td><input type="number" class="distance" step="0.01" oninput="calculateRow(this)"></td>
                 <td><input type="number" class="pace-minutes" oninput="calculateRow(this)"></td>
                 <td><input type="number" class="pace-seconds" oninput="calculateRow(this)"></td>
-                <td class="result">0</td>
+                <td class="result">0:00</td>
             </tr>
         </tbody>
         <tfoot>
             <tr class="summary">
                 <td id="totalDistance">0</td>
                 <td colspan="2">Average Pace: <span id="averagePace">0:00</span></td>
-                <td id="totalTime">0:00</td>
+                <td id="totalTime">0:00:00</td>
             </tr>
         </tfoot>
     </table>
@@ -93,7 +79,7 @@
                 <td><input type="number" class="distance" step="0.01" oninput="calculateRow(this)"></td>
                 <td><input type="number" class="pace-minutes" oninput="calculateRow(this)"></td>
                 <td><input type="number" class="pace-seconds" oninput="calculateRow(this)"></td>
-                <td class="result">0</td>
+                <td class="result">0:00</td>
             `;
 
             table.appendChild(newRow);
@@ -107,9 +93,10 @@
 
             const totalPaceSeconds = (paceMinutes * 60) + paceSeconds;
             const totalSeconds = distance * totalPaceSeconds;
-            const totalMinutes = Math.ceil(totalSeconds / 60); // Round up to the nearest minute
+            const minutes = Math.floor(totalSeconds / 60);
+            const seconds = Math.round(totalSeconds % 60);
 
-            row.querySelector('.result').textContent = totalMinutes;
+            row.querySelector('.result').textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
 
             calculateSummary();
         }
@@ -117,25 +104,27 @@
         function calculateSummary() {
             const rows = document.querySelectorAll('#calculatorTable tr');
             let totalDistance = 0;
-            let totalTimeInMinutes = 0;
+            let totalTimeInSeconds = 0;
 
             rows.forEach(row => {
                 const distance = parseFloat(row.querySelector('.distance').value) || 0;
-                const time = parseInt(row.querySelector('.result').textContent) || 0;
+                const result = row.querySelector('.result').textContent.split(':');
+                const timeInSeconds = (parseInt(result[0]) * 60) + parseInt(result[1]);
 
                 totalDistance += distance;
-                totalTimeInMinutes += time;
+                totalTimeInSeconds += timeInSeconds;
             });
 
-            const totalHours = Math.floor(totalTimeInMinutes / 60);
-            const remainingMinutes = totalTimeInMinutes % 60;
+            const totalHours = Math.floor(totalTimeInSeconds / 3600);
+            const totalMinutes = Math.floor((totalTimeInSeconds % 3600) / 60);
+            const totalSeconds = totalTimeInSeconds % 60;
 
-            const averagePaceInSeconds = totalDistance > 0 ? Math.ceil((totalTimeInMinutes * 60) / totalDistance) : 0;
+            const averagePaceInSeconds = totalDistance > 0 ? Math.ceil(totalTimeInSeconds / totalDistance) : 0;
             const averagePaceMinutes = Math.floor(averagePaceInSeconds / 60);
             const averagePaceSeconds = averagePaceInSeconds % 60;
 
             document.getElementById('totalDistance').textContent = totalDistance.toFixed(2);
-            document.getElementById('totalTime').textContent = `${totalHours}:${remainingMinutes.toString().padStart(2, '0')}`;
+            document.getElementById('totalTime').textContent = `${totalHours}:${totalMinutes.toString().padStart(2, '0')}:${totalSeconds.toString().padStart(2, '0')}`;
             document.getElementById('averagePace').textContent = `${averagePaceMinutes}:${averagePaceSeconds.toString().padStart(2, '0')}`;
         }
     </script>
