--- a/time1.html
+++ b/time1.html
@@ -42,6 +42,10 @@
     </style>
 </head>
 <body>
+
+<div id="menu-container"></div>
+<script src="menu.js"></script>
+    
     <h1>Pace and Time Calculator</h1>
     <table>
         <thead>
