--- a/load1.html
+++ b/load1.html
@@ -101,18 +101,8 @@
 </head>
 <body>
 
-    <label for="menu">Choose a page:</label>
-    <select id="menu" onchange="location = this.value;">
-        <option value="">-- Select --</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/vcr1.html">1.หาค่า VCR</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/vcr2.html">2.หาโซนจาก VCR </option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/pace1.html">3.คำนวณ Pace,Distance,Time</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/pace2.html">4.คำนวณ %Pace</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/pace3.html">5.VCR Weekly Plan</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/load1.html">6.COROS Load</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/training1.html">7.Training Program</option>
-        <option value="https://wadcharid.github.io/vcr-fcaon/load1.html">8.คำนวณเวลาวิ่งรวม</option>
-    </select>
+<div id="menu-container"></div>
+<script src="menu.js"></script>
     
     <h1>Training Load Calculator</h1>
     <form oninput="calculateTrainingLoad()">
